# asyncVSsync

./: README.md  benchmark_client_async.py  benchmark_client_sync.py  generator_fake_clients.py  main.py  pyproject.toml
infra/: database.py
