[project]
name = "asgyncpg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "faker>=37.4.0",
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]
